--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@langchain/community": "0.3.32",
     "@langchain/core": "0.3.40",
+    "@langchain/langgraph": "^0.2.49",
     "@langchain/mistralai": "0.2.0",
     "dotenv": "16.4.7",
+    "duck-duck-scrape": "^2.2.7",
     "googleapis": "144.0.0",
     "grammy": "1.35.0",
     "langchain": "0.3.19"
